--- a/tests/test.Rnw
+++ b/tests/test.Rnw
@@ -271,6 +271,7 @@ dReport(race + sex ~ region, data=addMarginal(d, region),
         w=4.75, h=2.75, subpanel='demoreg',
         head='Demographics',
         popts=list(layout=c(1,2),
+           par.strip=list(cex=.5, col='red'),
            key=list(space='right', cex=.7), text.at=1.5))
            
 ## Add a new block of variables that apply only to males
@@ -301,7 +302,8 @@ dReport(age + sbp + dbp ~ region,
         head='Baseline continuous variables')
 
 dReport(age + sbp + dbp ~ treat + region, w=6, h=3.5,
-           data=d, append=TRUE, subpanel='txreg')
+        data=d, append=TRUE, subpanel='txreg',
+        sopts=list(cex.strip=.65))
 
 # Same but show regions combined
 dReport(age + sbp + dbp ~ treat + region, w=6, h=4.75,
