--- a/tests/test.Rnw
+++ b/tests/test.Rnw
@@ -3,7 +3,9 @@
 \documentclass{article}
 \usepackage{fancyhdr}
 \usepackage{graphicx}
-\usepackage{chngpage}   % for exReport \begin{adjustwidth}
+\usepackage{changepage}   % for exReport \begin{adjustwidth}
+\usepackage{relsize}
+% pdflatex used Sweavel.sty that is a symbolic link to Sweavelbw.sty
 
 \def\titl{DSMB Report for EXAMPLE Trial}
 
@@ -154,7 +156,7 @@ dNeedle(c(1,2,3,1)/4,'lttdemod')
   \end{tabular}
 \end{center}
 \paragraph{Extended Box Plots}
-\newcommand{\eboxpopup}[1]{\tooltipm{#1}{\includegraphics{bpplt-proto}}}
+\newcommand{\eboxpopup}[1]{\tooltipm{#1}{\includegraphics{bpplt-proto-1}}}
 % To not generate pop-up use: \newcommand{\eboxpopup}[1]{}
 
 For depicting distributions of continuous variables, many of the
@@ -163,6 +165,16 @@ box--percentile plots.  A prototype, with explanations, is below.
 <<bpplt-proto,w=5,h=3.5>>=
 bpplt()
 @ 
+
+\paragraph{Dot Charts}
+Dot charts are used to present stratified proportions.  In these
+charts the area of the symbols is proportional to the square root of
+the denominator.  The legend shows representative denominators and
+their corresponding symbol areas, using denominators that actually
+occurred in the data and extended from the minimum observed to the
+maximum observed sample size.
+
+
 \paragraph{Survival Curves}
 Graphs containing pairs of Kaplan-Meier survival curves show a shaded
 region centered at the midpoint of the two survival estimates and
@@ -259,29 +271,23 @@ dasna <- subset(d, region=='North America')
 # with(dasna, table(race, treat))
 den <- c(enrolled=n + 50, randomized=n, table(d$treat))
 setgreportOption(denom=den, tx.var='treat')
-             
+           
 dReport(race + sex +
-           ynbind(x1, x2, x3, x4, x5, x6, x7, label='Exclusions') ~ 1,
-           head='Overall frequencies of categorical demographic variables and exclusions',
-           data=d, w=4, h=4.5, popts=list(layout=c(1,3)))
+        ynbind(x1, x2, x3, x4, x5, x6, x7, label='Exclusions') ~ 1,
+        head='Overall frequencies of categorical demographic variables and exclusions',
+        data=d, w=4, h=4.5)
 
-## Leave extra space to right of panels for numerators/denominators
 dReport(race + sex ~ region, data=addMarginal(d, region),
         groups='region', append=TRUE,
-        w=4.75, h=2.75, subpanel='demoreg',
-        head='Demographics',
-        popts=list(layout=c(1,2),
-           par.strip=list(cex=.5, col='red'),
-           key=list(space='right', cex=.7), text.at=1.5))
+        w=4.75, h=3.75, subpanel='demoreg',
+        head='Demographics')
            
 ## Add a new block of variables that apply only to males
 dReport(race + sex +
         pBlock(race, subset=sex=='Male', label='Race: Males') ~ region,
         data=d, groups='region', append=TRUE,
-        w=4.75, h=3.5, subpanel='demoblock',
-        popts=list(layout=c(1,3),
-          key=list(space='top'),
-          head='Demographics with race for males'))
+        w=4.75, h=4, subpanel='demoblock',
+        head='Demographics with race for males')
 
 excl <- with(d, ynbind(x1, x2, x3, x4, x5, x6, x7,
                        label='Exclusions'))
@@ -291,6 +297,15 @@ dReport(excl ~ 1, head='Exclusions', append=TRUE,
 dReport(race + sex + excl ~ treat + region, groups='treat',
         head='Categorical demographic variables and exclusions',
         data=d, append=TRUE, w=7, h=4.5, subpanel='txreg')
+
+cat('\\clearpage\n')
+
+# Show the same information plus numerators and denominators by using
+# lattice format
+
+dReport(race + sex + excl ~ treat + region, groups='treat',
+        head='Categorical demographic variables and exclusions',
+        data=d, append=TRUE, w=7, h=4.5, subpanel='txregl', lattice=TRUE)
 
 ## Show spike histogram for raw data, 50 bins
 dReport(age + sbp + dbp ~ region,
@@ -381,12 +396,20 @@ denom <- c(enrolled=n + 40, randomized=400, a=sum(dat$treat=='a'),
 setgreportOption(denom=denom, tx.var='treat')
 survReport(Surv(t1, e1) + Surv(t2, e2) ~ treat, data=dat,
            mfrow=c(2,1), w=4.75, h=6, ps=8, what='S')
+# Show estimates combining treatments
+survReport(Surv(t1, e1) + Surv(t2, e2) ~ 1, data=dat, subpanel='nostrat',
+           mfrow=c(2,1), w=4.75, h=6, ps=8, what='S', times=3, ylim=c(.1, 1))
 
 # Same but use multiple figures and use 1 - S(t) scale
 survReport(Surv(t1, e1) + Surv(t2, e2) ~ treat, data=dat,
-           multi=TRUE, subpanel='multi', append=TRUE, ps=9, what='1-S')
-@ 
+           multi=TRUE, subpanel='multi', append=TRUE, ps=9, what='1-S',
+           times=3:4, aehaz=FALSE, y.n.risk=-.02)
 
+survReport(Surv(t1, e1) + Surv(t2, e2) ~ 1, data=dat,
+           multi=TRUE, subpanel='multinostrat', append=TRUE, ps=9, what='1-S',
+           y.n.risk=-.02)
+@ 
+\clearpage
 \section{Adverse Events}
 For this example, the denominators for the two treatments in the
 pop-up needles will be incorrect because the dataset did not have
@@ -430,7 +453,7 @@ ae <- ae[subs, c('RAND', 'PREF')]
 names(ae) <- c('treat', 'event')
 label(ae$treat) <- 'Treatment'
 
-eReport(event ~ treat, data=ae, minincidence=.05)
+eReport(event ~ treat, data=ae, minincidence=.05, panel='aevents')
 @ 
 \clearpage   % needed to get last tooltips to work
 
